# ChemFuseKit

./: .gitignore  CHANGELOG.md  TEST.py  cda_example_notebook.ipynb  pca_model.sklearn  pyproject.toml  readme.md  requirements.txt
.github/workflows/: gh_pages.yml  pylint.yml  release.yml  thesis.yml  unittest.yml
Notes/: Constructors.md  PCA-LR.md  PCA.md  SVM.md  To-do.md  kNN.md
Notes/.obsidian/: workspace.json
case studies/: IMS_GC_QEPAS.xlsx  concat_vs_outer.ipynb  concat_vs_outer_3_tables.ipynb  concat_vs_outer_knn.ipynb  data_fusion.ipynb  midlevel_fusion.ipynb  midlevel_fusion_knn.ipynb  new_dataset.xlsx
chemfusekit/: __base.py  __init.py__  __init__.py  __utils.py  df.py  knn.py  lda.py  lldf.py  lr.py  pca.py  plsda.py  svm.py
colab_datafusion_analysis/: knn.py  lda.py  lr.py  plsda.py  svm.py
docs/: cookbook_versions.json  docusaurus.config.js  dump.txt  lldf.m  package-lock.json  package.json  project plan.md  requirements specification.md  versions.json
docs/UML/: process state machine.puml  sequence.puml  use cases.puml
docs/blog/: 2024-06-03-version-1d2d0.md  2024-06-04-version-2d0d0.md  2024-06-11-version-2d4d0.md  2024-06-12-version-2d5d0.md  authors.yml
docs/cookbook/: case-study-data-fusion.md  case-study-hybrid.md  case-study-lowlevel-midlevel.md  data-operations.md  structure.md
docs/datafusion_docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: complete-workflow.md  tutorial.md
examples/: knn_notebook.ipynb  pca_lda_notebook.ipynb  pca_lr_notebook.ipynb  plsda_notebook.ipynb  qepas.xlsx.2  svm_notebook.ipynb
notes/: A Novel Forensic Tool for the Characterization and Comparison of Printing Ink Evidence.. Development and Evaluation of a Searchable Database Using Data Fusion of Spectrochemical Methods.md  Beartype.md  Constructors.md  Conventional Commits.md  Kanban.md  PCA-LR.md  PCA.md  PEP coding standards.md  SVM.md  To do.md  Use Case Diagram.md  kNN.md
notes/.obsidian/: community-plugins.json  daily-notes.json  workspace.json
notes/Devlog/: 2024-04-19.md  2024-04-20.md  2024-04-22.md  2024-04-23.md  2024-05-06.md  2024-05-07.md  2024-05-08.md  2024-05-09.md  2024-05-17.md  2024-05-18.md
notes/References/: A Review of Data Fusion Techniques.md  An introduction to multisensor data fusion.md  Assessing the varietal origin of extra-virgin olive oil using liquid chromatography fingerprints of phenolic compound, data fusion and chemometrics.md  Assessment of premium organic orange juices authenticity using HPLC-HR-MS and HS-SPME-GC-MS combining data fusion and chemometrics,Food Control.md  Data fusion methodologies for food and beverage authentication and quality assessment – A review,.md  Data fusion.md  Discriminant analysis of vegetable oils by thermogravimetric-gas chromatography-mass spectrometry combined with data fusion and chemometrics without sample pretreatment.md  Outer product analysis of electronic nose and visible spectra, application to the measurement of peach fruit characteristics.md  (+2 more)
src/: __init.py__  lda.py  lldf.py  main.py  notebook.ipynb  pca.py  svm.py
tests/: rt.xlsx  test_base.py  test_df.py  test_knn.py  test_lda.py  test_lldf.py  test_lr.py  test_pca.py  test_plsda.py  test_svm.py
thesis/: 0-header.md  0.1-abstract.md  0.2-index.md.md  0.3.md  1-abstract.md  1-domanda-di-ricerca.md  2-index.md.md  2-revisione-letteraria.md  3-metodologia-e-implementazione.md  3.1-ingegneria-software.md  3.2-considerazioni-tecniche.md  3.3-design-architetturale.md  3.3-dettagli-implementativi.md  3.4-metodologia-ricerca.md  4-case-study.md  4.1-case-study-data-fusion.md  4.2-case-study-midlevel-fusion.md  4.3-case-study-fusione-diadica.md  4.4-case-study-GUI.md  5-risultati-e-conclusione.md  6-conclusione.md  998-ringraziamenti.md  999-bibliografia.md  999-ringraziamenti.md  disable_float.tex  use_cases.puml
(+171 files in other folders)
